# sami

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AUDITORIA.md  BACKLOG.md  CLAUDE.md  Dockerfile  Procfile  README.md  database.py  docker-compose.yml  main.py  pyproject.toml  run.py  sami_tesseract_config.md  service.py
config/: __init__.py  common.py  logger.py  patrones_ocr.py  server.py  settings.py
database/: README.md  __init__.py  engine.py  models.py
database/backends/: __init__.py  postgres.py  sqlite.py
docs/compose/plans/: 2026-07-14-plan-auditoria-sami.md
docs/compose/reports/: 2026-07-14-AUDITORIA-CONSOLIDADA.md
ocr/: .env.example  PROVEEDORES_OCR.md  __init__.py  base.py  compresion.py  config.toml  env_loader.py  fallback.py  gemini_provider.py  ocrspace_provider.py  parsers.py  patrones_ocr.toml  tesseract_provider.py
static/: index.html  manifest.json  sw.js
storage/: __init__.py  base.py  cloudinary.py  local.py  s3.py
tests/: simular_ocr_seco.py  test_auth.py  test_compresion.py  test_config.py  test_parsers.py  test_rate_limiter.py  test_upload_validator.py
utils/: __init__.py  auth.py  exceptions.py  rate_limiter.py  upload_validator.py
