[project]
name = "sami"
version = "2.0.0"
description = "SAMI — Sistema de Archivo y Manejo de Imagenes de Comprobantes"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "python-multipart>=0.0.9",
    "Pillow>=10.0.0",
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pytesseract>=0.3.13",
    "requests>=2.31.0",
    "pydantic-settings>=2.14.2",
]

[project.optional-dependencies]
s3 = ["boto3>=1.34"]
postgres = ["psycopg2-binary>=2.9"]
cloudinary = ["cloudinary>=1.40"]
dev = ["pytest>=8.0", "httpx>=0.27.0"]
all = ["sami[s3,postgres,cloudinary,dev]"]

